fix header on mobile for good, more work on implementing scrolling animations...

--- a/src/components/ResumeContent/ResumeContent.scss
+++ b/src/components/ResumeContent/ResumeContent.scss
@@ -5,10 +5,12 @@
   top: 0;
   left: 0;
   z-index: 99;
+  border: 1px solid red;
 
   #Resume {
     margin: 0 auto;
     width: 75%;
+    border: 2px dashed green;
   }
 
   .contact-icon {
